; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_blockframe.c_find_pc_partial_function.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_blockframe.c_find_pc_partial_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfd_section = type { i32 }
%struct.obj_section = type { %struct.bfd_section* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @find_pc_partial_function(i32 %0, i8** %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.bfd_section*, align 8
  %10 = alloca %struct.obj_section*, align 8
  store i32 %0, i32* %5, align 4
  store i8** %1, i8*** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call %struct.bfd_section* @find_pc_overlay(i32 %11)
  store %struct.bfd_section* %12, %struct.bfd_section** %9, align 8
  %13 = load %struct.bfd_section*, %struct.bfd_section** %9, align 8
  %14 = icmp eq %struct.bfd_section* %13, null
  br i1 %14, label %15, label %26

15:                                               ; preds = %4
  %16 = load i32, i32* %5, align 4
  %17 = call %struct.obj_section* @find_pc_section(i32 %16)
  store %struct.obj_section* %17, %struct.obj_section** %10, align 8
  %18 = load %struct.obj_section*, %struct.obj_section** %10, align 8
  %19 = icmp eq %struct.obj_section* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  store %struct.bfd_section* null, %struct.bfd_section** %9, align 8
  br label %25

21:                                               ; preds = %15
  %22 = load %struct.obj_section*, %struct.obj_section** %10, align 8
  %23 = getelementptr inbounds %struct.obj_section, %struct.obj_section* %22, i32 0, i32 0
  %24 = load %struct.bfd_section*, %struct.bfd_section** %23, align 8
  store %struct.bfd_section* %24, %struct.bfd_section** %9, align 8
  br label %25

25:                                               ; preds = %21, %20
  br label %26

26:                                               ; preds = %25, %4
  %27 = load i32, i32* %5, align 4
  %28 = load %struct.bfd_section*, %struct.bfd_section** %9, align 8
  %29 = load i8**, i8*** %6, align 8
  %30 = load i32*, i32** %7, align 8
  %31 = load i32*, i32** %8, align 8
  %32 = call i32 @find_pc_sect_partial_function(i32 %27, %struct.bfd_section* %28, i8** %29, i32* %30, i32* %31)
  ret i32 %32
}

declare dso_local %struct.bfd_section* @find_pc_overlay(i32) #1

declare dso_local %struct.obj_section* @find_pc_section(i32) #1

declare dso_local i32 @find_pc_sect_partial_function(i32, %struct.bfd_section*, i8**, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
